[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
itertools = "0.12.0"
num = "0.4.1"
prettytable-rs = "0.10.0"
rayon = "1.8.0"

[lib]
proc-macro = true
path = "helper_macros/lib.rs"

[profile.release]
debug = true

